task5/tests/hw5-tests/output/t2.out
lli: <stdin>:27:15: error: use of undefined value '%-21932'
%t2 = zext i8 %-21932 to i32
              ^

